@startuml

!theme plain

Title "Entities Relationship Diagram"
entity Movie {
    *Id : number <<generated>>
    Release: number
    Title: text
    Winner: bool            
}

entity Producer{
   *Id : number <<generated>>
   Name : text
}

entity Studio {
   *Id : number <<generated>>
   Name : text
}

entity MovieProducers {
    *Id: number <<generated>>
    MovieId: number <<FK>>
    ProducerId: number <<FK>>
}
    
entity MovieStudios {
    *Id: number <<generated>>
    MovieId: number <<FK>>
    StudioId: number <<FK>>
}

Movie ||--|| MovieProducers
MovieProducers ||--|| Producer
Movie ||--|| MovieStudios
MovieStudios ||--|| Studio
 
@enduml